# libhevc-arm

./: CMakeLists.txt
decoder/: ihevcd_parse_headers.c  ihevcd_parse_slice.c
decoder/arm/: ihevcd_function_selector.c
